fix scrollbars

--- a/02_UIL/client/src/app/order-history/history-item/history-item.component.css
+++ b/02_UIL/client/src/app/order-history/history-item/history-item.component.css
@@ -1,12 +1,23 @@
 .card {
-    width: 300px;
-    height: 300px;
+  width: 332px;
+  height: 300px;
 }
 
-.list-group-item, .list-group {
-    display: inline-block;
+.list-group-item,
+.list-group {
+  display: inline-block;
 }
 
 .btn {
-    width: 50%;
+  width: 50%;
 }
+
+.history-item {
+  width: 134px;
+}
+
+.card-body {
+  overflow-y: auto;
+  margin-right: 0;
+}
+
